src/App.css
/*Basic reset to ensure full height and standard margins */
html, body, #root {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-family: sans-serif;
}

/*Ensure all contents use border-box */
*, *::before, *::after {
  box-sizing: inherit;
}

/*This is the whole container for the App.jsx page*/
.app-container {
  display: flex;
  height: 100vh;
  width: 100vw; 
  border: 1px solid black; 
}

/*This holds the list of chat rooms*/
.sidebar {
  flex: 0 0 25%;
  border-right: 1px solid black;
  padding: 20px;
  background-color: #ffffff;
}

/*This hold the entire righthand chat display */
.main-chat {
  flex: 1; 
  display: flex;
  flex-direction: column;
  height: 100vh;
}

/*Spacing for the chat; this is also where the chat messages will be shown */
.chat-messages {
  flex: 1;
  padding: 20px;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  gap: 10px;
  flex-grow: 1;
}

/* styles for specifically the message of each chat bubble */
.message-bubble {
  background: #e0e0e0;
  color: black;
  padding: 8px 12px;
  border-radius: 10px;
  max-width: 60%;
  overflow-wrap: break-word; 
  word-break: break-word;
  overflow-wrap: break-word; 
  word-break: break-word;
  hyphens: auto;
  -webkit-hyphens: auto;
  
  transition: transform 0.1s ease, box-shadow 0.1s ease;
}

.message-container.sent .message-bubble:hover {
  transform: scale(1.005) translateX(-2px);
  /* box-shadow: 0px 0px 2px #4ef3ff; */
}
.message-container.received .message-bubble:hover {
  transform: scale(1.005) translateX(2px);
  /* box-shadow: 0px 0px 2px #ebebeb; */
}

/* container for the bubble, and username. default styles */
.message-container {
  display: flex;
  /* align-self: flex-start; */
  flex-direction: column;
  width: 100%;
  /* height: 100%; */
  text-align: left;
}

/* pushed first message down so messages appear to send from the bottom, up */
.message-container:first-child {
  margin-top: auto;
}

/* User's messages */
.message-container.sent {
  align-items: flex-end;
}
.message-container.sent .message-bubble {
  background-color: #4ebcff;
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
}
.message-container.sent .pfp {
  height: 30px;
  margin: 0px 0px 0px 7px;
  border-radius: 20px;
}

/* Other people's messages */
.message-container.received {
  align-items: flex-start;
}
.message-container.received .message-bubble {
  background-color: #8b8b8b;
  display: flex;
  flex-direction: row;
  align-items: center;
}
.message-container.received .pfp {
  height: 30px;
  margin: 0px 7px 0px 0px;
  border-radius: 20px;
}

/* the little username tag underneath the bubble */
.sent-by {
  font-size: smaller;
  color: white;
  margin: 5px 0px 0px 0px;
  padding: 0px;
  /* line-height: 5px; */
}

/*Message input area; this is where a chat box will be created for user input. */
.message-input {
  height: 120px;
  padding: 20px;
  background-color: #ffffff;
  border-top: 1px solid black;
}

